@@ -201,6 +201,7 @@ Chronological list of authors
   - Jake Fennick
   - Utsav Khatu
   - Patricio Barletta
+  - Mikhail Glagolev
 
 
 External code
