@@ -119,6 +119,7 @@ SECTIONS = set([
     'Impropers',
     'Pair',
     'Pair LJCoeffs',
+    'PairIJ Coeffs',
     'Bond Coeffs',
     'Angle Coeffs',
     'Dihedral Coeffs',
